<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">CamHi</string>
    <string name="click_to_add_camera">Add Camera</string>
    <string name="name">Name:</string>
    <string name="user_name">UserName:</string>
    <string name="camera">Camera</string>
    <string name="admin">admin</string>
    <string name="uid">UID:</string>
    <string name="psw">Password</string>
    <string name="search_in_lan">Search Camera from LAN</string>
    <string name="cancel">Cancel</string>
    <string name="tips_null_nike">Camera name cannot be empty.</string>
    <string name="tips_null_uid">UID cannot be empty.</string>
    <string name="tips_null_username">User Name cannot be empty.</string>
    <string name="tips_add_camera_exists">This camera already exists, please enter another one.</string>
    <string name="setting">Setting</string>
    <string name="tips_msg_delete_camera">Are you sure you want to delete the camera?</string>
    <string name="click_offline_setting">Cannot setup offline camera</string>
    <string name="tips_no_permission">Please check the settings to open the relevant application permissions</string>
    <string name="tips_remove_success">Remove camera successfully</string>
    <string name="tips_internet_no_cameras">Devices not found on the internet</string>
    <string name="uid_limit_input">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-—</string>
    <string name="tips_limit_add_camera">Limits 64 cameras</string>
    <!-- lt -->
    <string name="tip_device_add">Device added</string>
    <string name="aleary_add_device">added</string>
    <string name="disconnect">connection dropped</string>
    <string name="tips_restart">Restart...</string>
    <string name="tips_recovery">In recovery...</string>
    <string name="tips_update">In update...</string>
    <string name="tips_username_tolong">The username is too long</string>
    <string name="tips_password_tolong">The password is too long</string>
    <string name="hint_chart">Only English characters are supported</string>
    <string name="tips_invalid_uid">UID is invalid</string>
    <string name="tip_reminder">Tips</string>
</resources>
