<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/edit_box_bg"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_box_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/px_10">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/add_camera_name_et"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:longClickable="false"
                android:maxLength="31"
                android:text="@string/camera"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:background="#eee"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/px_10">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"/>

            <EditText
                android:id="@+id/add_camera_username_et"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_chart"
                android:longClickable="false"
                android:maxLength="31"
                android:text="@string/admin"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:background="#eee"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/px_10">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uid"/>

            <EditText
                android:id="@+id/add_camera_uid_edt"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:digits="@string/uid_limit_input"
                android:maxLength="31"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:background="#eee"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/px_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/px_10">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/psw"/>

            <EditText
                android:id="@+id/add_camera_psw_et"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_chart"
                android:longClickable="false"
                android:maxLength="31"
                android:text="@string/admin"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:background="#eee"/>

        <LinearLayout
            android:id="@+id/search_in_lan_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_in_lan"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/complete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_20"
            android:layout_marginRight="@dimen/px_20"
            android:gravity="center_vertical"
            android:text="完成"
            android:textAlignment="center"
            />
    </LinearLayout>

</ScrollView>